--- a/terasoluna-gfw-web/pom.xml
+++ b/terasoluna-gfw-web/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>terasoluna-gfw-parent</artifactId>
+        <artifactId>terasoluna-gfw-starter-web</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+        <relativePath>../terasoluna-gfw-starter-web/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-web</artifactId>
     <packaging>jar</packaging>
@@ -65,11 +65,6 @@
         <!-- == End TERASOLUNA == -->
 
         <!-- == Begin Spring == -->
-        <!-- Spring MVC -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
 
         <!-- Spring Test -->
         <dependency>
@@ -87,13 +82,6 @@
             <scope>provided</scope>
         </dependency>
         <!-- == End Tomcat == -->
-
-        <!-- == Begin Other JavaEE/SE APIs == -->
-        <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-        </dependency>
-        <!-- == End Other JavaEE/SE APIs == -->
 
         <!-- == Begin Database == -->
         <!-- H2 (for test) -->
