--- a/terasoluna-gfw-starter-jpa/pom.xml
+++ b/terasoluna-gfw-starter-jpa/pom.xml
@@ -7,7 +7,7 @@
         <version>5.2.0-SNAPSHOT</version>
         <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>terasoluna-gfw-jpa</artifactId>
+    <artifactId>terasoluna-gfw-starter-jpa</artifactId>
     <name>TERASOLUNA Server Framework for Java (5.x) for JPA</name>
     <description>Maven dependency definition for using JPA</description>
     <url>http://terasoluna.org</url>
