Refactored security-web and updated dependencies in web & web-jsp #508

--- a/terasoluna-gfw-starter-web/terasoluna-gfw-starter-web/pom.xml
+++ b/terasoluna-gfw-starter-web/terasoluna-gfw-starter-web/pom.xml
@@ -13,7 +13,12 @@
 	<url>http://terasoluna.org</url>
 
 	<dependencies>
-
+		<!-- == Begin TERASOLUNA == -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>terasoluna-gfw-web</artifactId>
+		</dependency>
+		<!-- == End TERASOLUNA == -->
 		<!-- == Begin Spring == -->
 		<!-- Spring MVC -->
 		<dependency>
