--- a/terasoluna-gfw-starter-web-jsp/terasoluna-gfw-starter-web-jsp/pom.xml
+++ b/terasoluna-gfw-starter-web-jsp/terasoluna-gfw-starter-web-jsp/pom.xml
@@ -15,11 +15,17 @@
 	<url>http://terasoluna.org</url>
 
 	<dependencies>
-        <!-- == Begin Other JavaEE/SE APIs == -->
-        <dependency>
-            <groupId>org.apache.taglibs</groupId>
-            <artifactId>taglibs-standard-jstlel</artifactId>
-        </dependency>
-        <!-- == End Other JavaEE/SE APIs == -->
+		<!-- == Begin TERASOLUNA == -->
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>terasoluna-gfw-web-jsp</artifactId>
+		</dependency>
+		<!-- == End TERASOLUNA == -->
+		<!-- == Begin Other JavaEE/SE APIs == -->
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-jstlel</artifactId>
+		</dependency>
+		<!-- == End Other JavaEE/SE APIs == -->
 	</dependencies>
 </project>
