--- a/terasoluna-gfw-starter/pom.xml
+++ b/terasoluna-gfw-starter/pom.xml
@@ -7,7 +7,7 @@
 		<version>5.2.0-SNAPSHOT</version>
 		<relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>terasoluna-gfw-starter-common</artifactId>
+	<artifactId>terasoluna-gfw-starter</artifactId>
 	<name>TERASOLUNA Server Framework for Java (5.x) for Common library</name>
 	<description>Useful libraries for common library created by TERASOLUNA Server Framework for Java (5.x)</description>
 	<url>http://terasoluna.org</url>
