added starter artifacts temporarily to gfw-parent #508

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -382,8 +382,20 @@
             <!-- == Begin TERASOLUNA == -->
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-common</artifactId>
                 <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-web</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
@@ -392,8 +404,20 @@
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-web-jsp</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-web-jsp</artifactId>
                 <version>${terasoluna.gfw.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-jodatime</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
@@ -405,6 +429,12 @@
                 <artifactId>terasoluna-gfw-security-core</artifactId>
                 <version>${terasoluna.gfw.version}</version>
             </dependency>
+             <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-security-web</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
                 <artifactId>terasoluna-gfw-security-web</artifactId>
@@ -412,13 +442,15 @@
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
-                <artifactId>terasoluna-gfw-jpa</artifactId>
+                <artifactId>terasoluna-gfw-starter-jpa</artifactId>
                 <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
-                <artifactId>terasoluna-gfw-mybatis3</artifactId>
+                <artifactId>terasoluna-gfw-starter-mybatis3</artifactId>
                 <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.terasoluna.gfw</groupId>
