Add pattern of testcase class #463

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -42,6 +42,7 @@
                     <configuration>
                         <includes>
                             <include>**/*Test.java</include>
+                            <include>**/*Tests.java</include>
                         </includes>
                         <argLine>${jacocoArgs}</argLine>
                     </configuration>
