refactored to group the starter artifacts into single parent starter #508

--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-jodatime/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-jodatime/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.terasoluna.gfw</groupId>
-		<artifactId>terasoluna-gfw-parent</artifactId>
+		<artifactId>terasoluna-gfw-starters</artifactId>
 		<version>5.2.0-SNAPSHOT</version>
-		<relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+		<relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
 	</parent>
 	<artifactId>terasoluna-gfw-starter-jodatime</artifactId>
 	<name>TERASOLUNA Server Framework for Java (5.x) for joda-time library</name>
