--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-jpa/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-jpa/pom.xml
@@ -2,10 +2,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>terasoluna-gfw-parent</artifactId>
+        <artifactId>terasoluna-gfw-starters</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+        <relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-starter-jpa</artifactId>
     <name>TERASOLUNA Server Framework for Java (5.x) for JPA</name>
