--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-security-web/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-security-web/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>terasoluna-gfw-parent</artifactId>
+		<artifactId>terasoluna-gfw-starters</artifactId>
 		<groupId>org.terasoluna.gfw</groupId>
 		<version>5.2.0-SNAPSHOT</version>
-		<relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+		<relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
 	</parent>
 	<artifactId>terasoluna-gfw-starter-security-web</artifactId>
 	<packaging>pom</packaging>
