--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-web-jsp/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-web-jsp/pom.xml
@@ -1,39 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
-		<artifactId>terasoluna-gfw-parent</artifactId>
+		<artifactId>terasoluna-gfw-starters</artifactId>
 		<groupId>org.terasoluna.gfw</groupId>
 		<version>5.2.0-SNAPSHOT</version>
-		<relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+		<relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
 	</parent>
-	<artifactId>terasoluna-gfw-starter-web</artifactId>
+	<artifactId>terasoluna-gfw-starter-web-jsp</artifactId>
 	<packaging>pom</packaging>
-	<name>terasoluna-gfw-starter-web</name>
+
+	<name>terasoluna-gfw-starter-web-jsp</name>
 	<url>http://terasoluna.org</url>
 
 	<dependencies>
 		<!-- == Begin TERASOLUNA == -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>terasoluna-gfw-web</artifactId>
+			<artifactId>terasoluna-gfw-web-jsp</artifactId>
 		</dependency>
 		<!-- == End TERASOLUNA == -->
-		<!-- == Begin Spring == -->
-		<!-- Spring MVC -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-		</dependency>
-		<!-- == End Spring == -->
-
 		<!-- == Begin Other JavaEE/SE APIs == -->
 		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-jstlel</artifactId>
 		</dependency>
 		<!-- == End Other JavaEE/SE APIs == -->
-
 	</dependencies>
-
 </project>
