--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -458,6 +458,48 @@
             	<artifactId>terasoluna-gfw-string</artifactId>
             	<version>${terasoluna.gfw.version}</version>
             </dependency>
+             <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	 <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-web</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	 <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-web-jsp</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	 <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-jodatime</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	<dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-security-web</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	 <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-jpa</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
+        	 <dependency>
+                <groupId>org.terasoluna.gfw</groupId>
+                <artifactId>terasoluna-gfw-starter-mybatis3</artifactId>
+                <version>${terasoluna.gfw.version}</version>
+                <type>pom</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <distributionManagement>
