--- a/terasoluna-gfw-web-jsp/pom.xml
+++ b/terasoluna-gfw-web-jsp/pom.xml
@@ -91,6 +91,8 @@
         <dependency>
             <groupId>org.apache.taglibs</groupId>
             <artifactId>taglibs-standard-jstlel</artifactId>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>javax.el</groupId>
