--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-mybatis3/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-mybatis3/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>terasoluna-gfw-starters</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
+        <relativePath>../../terasoluna-gfw-starters/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-starter-mybatis3</artifactId>
     <name>TERASOLUNA Server Framework for Java (5.x) for MyBatis3</name>
