--- a/terasoluna-gfw-starters/terasoluna-gfw-starter-security-web/pom.xml
+++ b/terasoluna-gfw-starters/terasoluna-gfw-starter-security-web/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>terasoluna-gfw-starters</artifactId>
 		<groupId>org.terasoluna.gfw</groupId>
 		<version>5.2.0-SNAPSHOT</version>
-		<relativePath>../terasoluna-gfw-starters/pom.xml</relativePath>
+		<relativePath>../../terasoluna-gfw-starters/pom.xml</relativePath>
 	</parent>
 	<artifactId>terasoluna-gfw-starter-security-web</artifactId>
 	<packaging>pom</packaging>
