change to 'NTT DATA CORPORATION'. #425

--- a/terasoluna-gfw-parent/pom.xml
+++ b/terasoluna-gfw-parent/pom.xml
@@ -24,7 +24,7 @@
     <developers>
         <developer>
             <name>NTT DATA</name>
-            <organization>NTT DATA, Inc.</organization>
+            <organization>NTT DATA CORPORATION</organization>
             <organizationUrl>http://terasolunaorg.github.io/</organizationUrl>
         </developer>
     </developers>
