Set 'pom' to Packaging type of artifacts and add 'version' and 'type' to dependency due #519

--- a/terasoluna-gfw-security-web/pom.xml
+++ b/terasoluna-gfw-security-web/pom.xml
@@ -65,6 +65,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>terasoluna-gfw-security-core</artifactId>
+            <version>${terasoluna.gfw.version}</version>
+            <type>pom</type>
         </dependency>
         <!-- == End TERASOLUNA == -->
 
