--- a/terasoluna-gfw-security-web/pom.xml
+++ b/terasoluna-gfw-security-web/pom.xml
@@ -65,6 +65,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>terasoluna-gfw-security-core</artifactId>
+            <type>pom</type>
         </dependency>
         <!-- == End TERASOLUNA == -->
 
