--- a/terasoluna-gfw-security-web/pom.xml
+++ b/terasoluna-gfw-security-web/pom.xml
@@ -54,6 +54,14 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -62,11 +70,8 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>terasoluna-gfw-web</artifactId>
         </dependency>
-        <!-- <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>terasoluna-gfw-security-core-dependencies</artifactId>
-            <type>pom</type>
-        </dependency> -->
+        <!-- <dependency> <groupId>${project.groupId}</groupId> <artifactId>terasoluna-gfw-security-core-dependencies</artifactId> 
+            <type>pom</type> </dependency> -->
         <!-- == End TERASOLUNA == -->
 
         <!-- == Begin Spring == -->
