--- a/pom.xml
+++ b/pom.xml
@@ -103,24 +103,24 @@
                     <version>${coveralls-maven-plugin.version}</version>
                     <configuration>
                         <jacocoReports>
-                            <jacocoReport>../terasoluna-gfw-common/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-jodatime/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-web/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-web-jsp/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-security-web/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-validator/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-codepoints/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>../terasoluna-gfw-string/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-common/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-jodatime/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-web/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-web-jsp/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-security-web/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-validator/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-codepoints/target/site/jacoco/jacoco.xml</jacocoReport>
+                            <jacocoReport>terasoluna-gfw-string/target/site/jacoco/jacoco.xml</jacocoReport>
                         </jacocoReports>
                         <sourceDirectories>
-                            <sourceDirectory>../terasoluna-gfw-common/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-jodatime/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-web/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-web-jsp/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-security-web/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-validator/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-codepoints/src/main/java</sourceDirectory>
-                            <sourceDirectory>../terasoluna-gfw-string/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-common/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-jodatime/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-web/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-web-jsp/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-security-web/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-validator/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-codepoints/src/main/java</sourceDirectory>
+                            <sourceDirectory>terasoluna-gfw-string/src/main/java</sourceDirectory>
                         </sourceDirectories>
                     </configuration>
                 </plugin>
