--- a/terasoluna-gfw-security-web/pom.xml
+++ b/terasoluna-gfw-security-web/pom.xml
@@ -70,8 +70,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>terasoluna-gfw-web</artifactId>
         </dependency>
-        <!-- <dependency> <groupId>${project.groupId}</groupId> <artifactId>terasoluna-gfw-security-core-dependencies</artifactId> 
-            <type>pom</type> </dependency> -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>terasoluna-gfw-security-core-dependencies</artifactId>
+            <type>pom</type>
+        </dependency>
         <!-- == End TERASOLUNA == -->
 
         <!-- == Begin Spring == -->
