create gfw-libraries-parent #508

--- a/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0201/pom.xml
+++ b/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0201/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>terasoluna-gfw-parent</artifactId>
+        <artifactId>terasoluna-gfw-libraries-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../../../terasoluna-gfw-parent/pom.xml</relativePath>
+        <relativePath>../../../terasoluna-gfw-libraries-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
