--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <url>http://terasoluna.org</url>
     </organization>
     <modules>
+        <module>terasoluna-gfw-libraries-parent</module>
         <module>terasoluna-gfw-common</module>
         <module>terasoluna-gfw-jodatime</module>
         <module>terasoluna-gfw-web</module>
@@ -64,6 +65,16 @@
             <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-snapshots/</url>
         </repository>
     </repositories>
+    <distributionManagement>
+        <repository>
+            <id>terasoluna-gfw-releases</id>
+            <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>terasoluna-gfw-snapshots</id>
+            <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
     <build>
         <pluginManagement>
             <plugins>
@@ -98,44 +109,17 @@
                     </executions>
                 </plugin>
                 <plugin>
-                    <groupId>org.eluder.coveralls</groupId>
-                    <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>${coveralls-maven-plugin.version}</version>
-                    <configuration>
-                        <jacocoReports>
-                            <jacocoReport>terasoluna-gfw-common/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-jodatime/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-web/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-web-jsp/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-security-web/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-validator/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-codepoints/target/site/jacoco/jacoco.xml</jacocoReport>
-                            <jacocoReport>terasoluna-gfw-string/target/site/jacoco/jacoco.xml</jacocoReport>
-                        </jacocoReports>
-                        <sourceDirectories>
-                            <sourceDirectory>terasoluna-gfw-common/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-jodatime/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-web/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-web-jsp/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-security-web/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-validator/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-codepoints/src/main/java</sourceDirectory>
-                            <sourceDirectory>terasoluna-gfw-string/src/main/java</sourceDirectory>
-                        </sourceDirectories>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>com.google.code.maven-license-plugin</groupId>
                     <artifactId>maven-license-plugin</artifactId>
                     <version>${com.google.code.maven-license-plugin.version}</version>
                     <configuration>
-                        <header>${project.basedir}/../license/header.txt</header>
+                        <header>${project.basedir}/license/header.txt</header>
                         <includes>
                             <include>src/**/*.java</include>
                         </includes>
                         <encoding>${encoding}</encoding>
                         <headerDefinitions>
-                            <headerDefinition>${project.basedir}/../license/header-definition.xml</headerDefinition>
+                            <headerDefinition>${project.basedir}/license/header-definition.xml</headerDefinition>
                         </headerDefinitions>
                     </configuration>
                 </plugin>
@@ -149,44 +133,11 @@
                         <lineEnding>CRLF</lineEnding>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
-                    <configuration>
-                        <source>${java-version}</source>
-                        <target>${java-version}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>${maven-antrun-plugin.version}</version>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
-    <distributionManagement>
-        <repository>
-            <id>terasoluna-gfw-releases</id>
-            <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>terasoluna-gfw-snapshots</id>
-            <url>http://repo.terasoluna.org/nexus/content/repositories/terasoluna-gfw-snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
     <properties>
-        <!-- == Maven Plugins == -->
-        <maven-war-plugin.version>2.5</maven-war-plugin.version>
-        <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
-        <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
-        <coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
         <jacoco-maven-plugin.version>0.7.5.201505241946</jacoco-maven-plugin.version>
-        <!-- == Other Properties== -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <archetype.test.skip>true</archetype.test.skip>
-        <encoding>UTF-8</encoding>
-        <java-version>1.7</java-version>
+        <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
     </properties>
 </project>
