--- a/terasoluna-gfw-validator/pom.xml
+++ b/terasoluna-gfw-validator/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>terasoluna-gfw-parent</artifactId>
+        <artifactId>terasoluna-gfw-libraries-parent</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../terasoluna-gfw-parent/pom.xml</relativePath>
+        <relativePath>../terasoluna-gfw-libraries-parent/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-validator</artifactId>
     <packaging>jar</packaging>
