--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0213kanji/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-codepoints/catalog/terasoluna-gfw-codepoints-jisx0213kanji/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>terasoluna-gfw-common-libraries</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
+        <relativePath>../../../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
