--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-validator/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>terasoluna-gfw-common-libraries</artifactId>
         <groupId>org.terasoluna.gfw</groupId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../terasoluna-gfw-common-libraries/pom.xml</relativePath>
+        <relativePath>../../terasoluna-gfw-common-libraries/pom.xml</relativePath>
     </parent>
     <artifactId>terasoluna-gfw-validator</artifactId>
     <packaging>jar</packaging>
